# not-warrior

./: .gitignore  Makefile  README.md  config.sample.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
not_warrior/: __init__.py  main.py
not_warrior/cli/: auth.py  config.py  main.py  sync.py
not_warrior/config/: mappings.py  settings.py
not_warrior/core/: hooks.py  notion_client.py  sync_engine.py  taskwarrior_client.py
not_warrior/models/: config.py  mapping.py  task.py
not_warrior/utils/: config_manager.py  helpers.py  logger.py
tests/integration/: test_sync.py
tests/unit/: test_notion_client.py  test_taskwarrior_client.py
